static/psi4manual/1.1.0/_sources/api/psi4.core.Matrix.rst.txt


psi4.core.Matrix
================

.. currentmodule:: psi4.core

.. autoclass:: Matrix
   :show-inheritance:

   
     
   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~Matrix.name
      ~Matrix.np
      ~Matrix.nph
      ~Matrix.shape

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~Matrix.absmax
      ~Matrix.accumulate_product
      ~Matrix.add
      ~Matrix.add_and_orthogonalize_row
      ~Matrix.apply_denominator
      ~Matrix.array_interface
      ~Matrix.axpy
      ~Matrix.back_transform
      ~Matrix.cholesky_factorize
      ~Matrix.clone
      ~Matrix.coldim
      ~Matrix.cols
      ~Matrix.copy
      ~Matrix.copy_lower_to_upper
      ~Matrix.copy_upper_to_lower
      ~Matrix.diagonalize
      ~Matrix.doublet
      ~Matrix.from_array
      ~Matrix.from_serial
      ~Matrix.gemm
      ~Matrix.get
      ~Matrix.identity
      ~Matrix.invert
      ~Matrix.load
      ~Matrix.load_mpqc
      ~Matrix.nirrep
      ~Matrix.np_read
      ~Matrix.np_write
      ~Matrix.partial_cholesky_factorize
      ~Matrix.power
      ~Matrix.print_out
      ~Matrix.project_out
      ~Matrix.remove_symmetry
      ~Matrix.rms
      ~Matrix.rotate_columns
      ~Matrix.rowdim
      ~Matrix.rows
      ~Matrix.save
      ~Matrix.scale
      ~Matrix.scale_column
      ~Matrix.scale_row
      ~Matrix.schmidt
      ~Matrix.set
      ~Matrix.subtract
      ~Matrix.sum_of_squares
      ~Matrix.symmetrize_gradient
      ~Matrix.symmetry
      ~Matrix.to_array
      ~Matrix.to_serial
      ~Matrix.trace
      ~Matrix.transform
      ~Matrix.triplet
      ~Matrix.vector_dot
      ~Matrix.zero
      ~Matrix.zero_diagonal
      ~Matrix.zero_lower
      ~Matrix.zero_upper

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: name
   .. autoattribute:: np
   .. autoattribute:: nph
   .. autoattribute:: shape

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: absmax
   .. automethod:: accumulate_product
   .. automethod:: add
   .. automethod:: add_and_orthogonalize_row
   .. automethod:: apply_denominator
   .. automethod:: array_interface
   .. automethod:: axpy
   .. automethod:: back_transform
   .. automethod:: cholesky_factorize
   .. automethod:: clone
   .. automethod:: coldim
   .. automethod:: cols
   .. automethod:: copy
   .. automethod:: copy_lower_to_upper
   .. automethod:: copy_upper_to_lower
   .. automethod:: diagonalize
   .. automethod:: doublet
   .. automethod:: from_array
   .. automethod:: from_serial
   .. automethod:: gemm
   .. automethod:: get
   .. automethod:: identity
   .. automethod:: invert
   .. automethod:: load
   .. automethod:: load_mpqc
   .. automethod:: nirrep
   .. automethod:: np_read
   .. automethod:: np_write
   .. automethod:: partial_cholesky_factorize
   .. automethod:: power
   .. automethod:: print_out
   .. automethod:: project_out
   .. automethod:: remove_symmetry
   .. automethod:: rms
   .. automethod:: rotate_columns
   .. automethod:: rowdim
   .. automethod:: rows
   .. automethod:: save
   .. automethod:: scale
   .. automethod:: scale_column
   .. automethod:: scale_row
   .. automethod:: schmidt
   .. automethod:: set
   .. automethod:: subtract
   .. automethod:: sum_of_squares
   .. automethod:: symmetrize_gradient
   .. automethod:: symmetry
   .. automethod:: to_array
   .. automethod:: to_serial
   .. automethod:: trace
   .. automethod:: transform
   .. automethod:: triplet
   .. automethod:: vector_dot
   .. automethod:: zero
   .. automethod:: zero_diagonal
   .. automethod:: zero_lower
   .. automethod:: zero_upper

   
   
